# whisper-flow

./: .gitignore  LICENSE  README.md  Rodin.icns  Rodin.spec  claude-progress.txt  feature_list.json  launcher.py  pyproject.toml
.github/workflows/: release.yml
docs/: README.md  cli.md  configuration.md  development.md  features.md  installation.md  quickstart.md
src/rodin/ui/: app.py
src/whisper_flow/: __init__.py  config.py  editor.py  hotkey.py  main.py  recorder.py  transcriber.py  typer.py
src/whisper_flow/ui/: __init__.py  menubar.py  overlay.py  overlay_win.py
